emodb-web and sdk modules