@@ -16,6 +16,7 @@ import com.bazaarvoice.emodb.common.dropwizard.guice.Global;
 import com.bazaarvoice.emodb.common.dropwizard.guice.SelfHostAndPort;
 import com.bazaarvoice.emodb.common.dropwizard.guice.ServerCluster;
 import com.bazaarvoice.emodb.common.dropwizard.guice.SystemTablePlacement;
+import com.bazaarvoice.emodb.common.dropwizard.service.EmoServiceMode;
 import com.bazaarvoice.emodb.common.stash.StashUtil;
 import com.bazaarvoice.emodb.datacenter.api.DataCenters;
 import com.bazaarvoice.emodb.plugin.PluginConfiguration;
@@ -71,10 +72,7 @@ import com.bazaarvoice.ostrich.dropwizard.pool.ManagedServicePoolProxy;
 import com.bazaarvoice.ostrich.pool.ServicePoolBuilder;
 import com.bazaarvoice.ostrich.retry.ExponentialBackoffRetry;
 import com.codahale.metrics.MetricRegistry;
-import com.google.common.base.Function;
-import com.google.common.base.Objects;
 import com.google.common.base.Optional;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import com.google.common.net.HostAndPort;
@@ -100,11 +98,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkArgument;
 
 /**
- * Guice module for use with {@link com.bazaarvoice.emodb.common.dropwizard.service.EmoServiceMode#SCANNER}
+ * Guice module for use with {@link EmoServiceMode#SCANNER}
  * <p>
  * Requires the following external references:
  * <ul>
@@ -154,9 +153,11 @@ public class ScanUploadModule extends PrivateModule {
         bind(String.class).annotatedWith(StashRequestTable.class).toInstance(_config.getScanRequestTable());
         bind(Integer.class).annotatedWith(MaxConcurrentScans.class).toInstance(_config.getScanThreadCount());
 
-        bind(new TypeLiteral<Optional<String>>(){}).annotatedWith(Names.named("pendingScanRangeQueueName"))
+        bind(new TypeLiteral<Optional<String>>() {
+        }).annotatedWith(Names.named("pendingScanRangeQueueName"))
                 .toInstance(_config.getPendingScanRangeQueueName());
-        bind(new TypeLiteral<Optional<String>>(){}).annotatedWith(Names.named("completeScanRangeQueueName"))
+        bind(new TypeLiteral<Optional<String>>() {
+        }).annotatedWith(Names.named("completeScanRangeQueueName"))
                 .toInstance(_config.getCompleteScanRangeQueueName());
 
         bind(ScanWriterGenerator.class).to(DefaultScanWriterGenerator.class).asEagerSingleton();
@@ -196,11 +197,11 @@ public class ScanUploadModule extends PrivateModule {
     protected String provideScanRequestTablePlacement(@SystemTablePlacement String tablePlacement) {
         return tablePlacement;
     }
-    
+
     @Provides
     @Singleton
     protected Region provideAmazonRegion() {
-        return Objects.firstNonNull(Regions.getCurrentRegion(), Region.getRegion(Regions.US_EAST_1));
+        return java.util.Optional.ofNullable(Regions.getCurrentRegion()).orElse(Region.getRegion(Regions.US_EAST_1));
     }
 
     @Provides
@@ -323,7 +324,7 @@ public class ScanUploadModule extends PrivateModule {
 
     @Provides
     @Singleton
-    @Named ("plugin")
+    @Named("plugin")
     protected List<StashStateListener> providePluginStashStateListeners(Environment environment, PluginServerMetadata metadata) {
         List<PluginConfiguration> pluginConfigs = _config.getNotifications().getStashStateListenerPluginConfigurations();
         if (pluginConfigs.isEmpty()) {
@@ -358,16 +359,11 @@ public class ScanUploadModule extends PrivateModule {
     @Provides
     @Singleton
     protected List<Dimension> provideCloudWatchDimensions() {
-        return FluentIterable.from(_config.getNotifications().getCloudWatchDimensions().entrySet())
-                .transform(new Function<Map.Entry<String, String>, Dimension>() {
-                    @Override
-                    public Dimension apply(Map.Entry<String, String> entry) {
-                        return new Dimension()
-                                .withName(entry.getKey())
-                                .withValue(entry.getValue());
-                    }
-                })
-                .toList();
+        return _config.getNotifications().getCloudWatchDimensions().entrySet().stream()
+                .map(entry -> new Dimension()
+                    .withName(entry.getKey())
+                    .withValue(entry.getValue()))
+                .collect(Collectors.toList());
     }
 
     @Provides
@@ -394,7 +390,7 @@ public class ScanUploadModule extends PrivateModule {
 
     @Provides
     @Singleton
-    @Named ("ScannerAPIKey")
+    @Named("ScannerAPIKey")
     protected String provideScannerApiKey(@ServerCluster String cluster) {
         if (!_config.getScannerApiKey().isPresent()) {
             return "anonymous";
@@ -409,7 +405,9 @@ public class ScanUploadModule extends PrivateModule {
         return scannerApiKey;
     }
 
-    /** Provider used internally when EmoDB queues are configured */
+    /**
+     * Provider used internally when EmoDB queues are configured
+     */
     public static class QueueScanWorkflowProvider implements Provider<ScanWorkflow> {
         private final CuratorFramework _curator;
         private final String _cluster;
@@ -422,9 +420,9 @@ public class ScanUploadModule extends PrivateModule {
 
         @Inject
         public QueueScanWorkflowProvider(@Global CuratorFramework curator, @ServerCluster String cluster,
-                                         Client client, @Named ("ScannerAPIKey") String apiKey,
-                                         @Named ("pendingScanRangeQueueName") Optional<String> pendingScanRangeQueueName,
-                                         @Named ("completeScanRangeQueueName") Optional<String> completeScanRangeQueueName,
+                                         Client client, @Named("ScannerAPIKey") String apiKey,
+                                         @Named("pendingScanRangeQueueName") Optional<String> pendingScanRangeQueueName,
+                                         @Named("completeScanRangeQueueName") Optional<String> completeScanRangeQueueName,
                                          Environment environment, MetricRegistry metricRegistry) {
             _curator = curator;
             _cluster = cluster;
@@ -456,7 +454,9 @@ public class ScanUploadModule extends PrivateModule {
         }
     }
 
-    /** Provider used internally when SQS queues are configured */
+    /**
+     * Provider used internally when SQS queues are configured
+     */
     public static class SQSScanWorkflowProvider implements Provider<ScanWorkflow> {
         private final AmazonSQS _amazonSQS;
         private final String _pendingScanRangeQueueName;
@@ -464,8 +464,8 @@ public class ScanUploadModule extends PrivateModule {
 
         @Inject
         public SQSScanWorkflowProvider(@ServerCluster String cluster, AmazonSQS amazonSQS,
-                                       @Named ("pendingScanRangeQueueName") Optional<String> pendingScanRangeQueueName,
-                                       @Named ("completeScanRangeQueueName") Optional<String> completeScanRangeQueueName) {
+                                       @Named("pendingScanRangeQueueName") Optional<String> pendingScanRangeQueueName,
+                                       @Named("completeScanRangeQueueName") Optional<String> completeScanRangeQueueName) {
             _amazonSQS = amazonSQS;
             _pendingScanRangeQueueName = pendingScanRangeQueueName.or(String.format("emodb-pending-scan-ranges-%s", cluster));
             _completeScanRangeQueueName = completeScanRangeQueueName.or(String.format("emodb-complete-scan-ranges-%s", cluster));
